# indi-harness

./: .gitignore  README.md  pyproject.toml  shell.nix
baselines/: s1_stock_sitl.json  s2_offboard_sitl.json  s3_layerA_sitl.json
docs/: apdds_audit.md  s2_latency_attribution.md  s3_layerA_results.md
indi_harness/: allocation.py  evalmetrics.py  filters.py  flatness.py  inner_loop.py  outer_loop.py  params.py  quat.py  runner.py  simmodel.py  tilt_yaw.py  trajectory.py
indi_harness/offboard/: bags.py  baseline.py  bridge.py  node.py  setpoints.py
indi_harness/sitl/: align.py  baseline.py  baseline_cc.py  binlog.py  frames.py  setpoints.py  streamer.py
scripts/: compare_baselines.py  run_tracking_demo.py
tests/: test_allocation.py  test_filters.py  test_flatness.py  test_indi_binlog.py  test_inner_loop.py  test_offboard_bags.py  test_offboard_bridge.py  test_offboard_frames.py  test_offboard_mission.py  test_offboard_setpoints.py  test_outer_loop.py  test_quat.py  test_s0_exit.py  test_simmodel.py  test_sitl_align.py  test_sitl_baseline.py  test_sitl_frames.py  test_sitl_setpoints.py  test_sitl_streamer.py  test_tilt_yaw.py  test_trajectory.py
trajectories/: hover.yaml  poly_test.yaml
