[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "indi-harness"
version = "0.2.0"
description = "Quaternion INDI prototype + trajectory harness (S0/S1 of the ArduPilot INDI plan)"
requires-python = ">=3.10"
dependencies = ["numpy", "pyyaml", "pymavlink", "rosbags"]

[project.optional-dependencies]
plot = ["matplotlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["indi_harness*"]
